--- a/action.yml
+++ b/action.yml
@@ -17,6 +17,8 @@ inputs:
 runs:
   using: "composite"
   steps:
+    - run: echo Installing EnergyPlusV${{ inputs.energyplus-version }}...
+      shell: bash
     - run: ./src/install.sh
       shell: bash
       env:
