--- a/action.yml
+++ b/action.yml
@@ -19,6 +19,8 @@ runs:
   steps:
     - run: echo Installing EnergyPlusV${{ inputs.energyplus-version }}...
       shell: bash
+    - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
+      shell: bash
     - run: ./src/install.sh
       shell: bash
       env:
