--- a/action.yml
+++ b/action.yml
@@ -15,7 +15,7 @@ inputs:
     required: true
   
 runs:
-  using: node16
+  using: "composite"
   steps:
     - run: echo Installing EnergyPlusV${{ inputs.energyplus-version }}...
       shell: bash
