--- a/action.yml
+++ b/action.yml
@@ -21,7 +21,7 @@ runs:
       shell: bash
     - run: echo "${{ github.action_path }}" >> $GITHUB_PATH
       shell: bash
-    - run: ./src/install.sh
+    - run: src/install.sh
       shell: bash
       env:
         ENERGYPLUS_VERSION: ${{ inputs.energyplus-version }}
