--- a/.github/workflows/run_action.yml
+++ b/.github/workflows/run_action.yml
@@ -21,4 +21,4 @@ jobs:
           energyplus-install: '22-1-0'
     - name: Display installed version
       shell: bash
-      run: echo "Installed EnergyPlusVersion: $(energyplus --version)"
+      run: echo "Installed EnergyPlusVersion $(energyplus --version)"
