--- a/.github/workflows/run_action.yml
+++ b/.github/workflows/run_action.yml
@@ -5,7 +5,8 @@ on:
 jobs:
   build:
     runs-on: ${{ matrix.os }}
-
+    timeout-minutes: 5
+    
     strategy:
       matrix:
         os: [ubuntu-latest, macos-latest, windows-latest]
